@@ -1,3 +1,6 @@
+2018-10-08 - version 0.9.0 RC5
+[*] Fix Frame border drawing
+
 2018-09-30 - version 0.9.0 RC4
 [+] New feature: borderless windows (thanks to Mark D Horn)
 [+] ScrollTo API for scrollable frame
